--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <form>
 
             <div class="Newsletter" >
-                <h1>Subscribe to our Newsletter</h1>
+                <h1>Subscribe to our News</h1>
               <input type="text" placeholder="Name" name="name" required>
               <input type="text" placeholder="Email address" name="mail" required>
               <input type="submit" value="Subscribe">
